@@ -28,6 +28,7 @@ PHP                                                                        NEWS
   (Ilia)
 - Fixed bug #26680 (Added version check in mysqli_report_index). (Georg)
 - Fixed bug #26675 (Segfault on ArrayAccess use). (Marcus)
+- Fixed bug #26640 (__autoload() not invoked by Reflection classes). (Jani)
 - Fixed bug #26543 (call_user_func() broken for self, parent). (Stanislav)
 - Fixed bug #26077 (memory leak when new() result is not assigned and no 
   constructor is defined). (Stanislav)
